--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,75 +8,46 @@ Date: 03-10-2021
 
 -->
 
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <%- include ('./partials/header') %>
-</head>
+<%- include partials/header.ejs %>
 
-<body id="page-top">
-  <!-- Navigation-->
-  <%- include ('./partials/navmenu') %>
+<%- include partials/main_nav.ejs %>
 
-  <section id = "contact">
-    <div class="container">
-      
-      <h2 class="text-center text-uppercase text-white">Contact Me</h2>
-      <hr class="star-light mb-5" />
-      <div class="row">
-        <div class="col-lg mx-auto">
-          <form name="sentMessage" id="contactForm" action="/thanks" method="POST">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">First Name</label>
-                  <input type="text" class="form-control" id="firstname" name="firstname" type="text"
-                    placeholder="First Name">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Last Name</label>
-                  <input type="text" class="form-control" id="lastname" name="lastname" type="text"
-                    placeholder="Last Name">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Contact Number</label>
-                  <input type="number" class="form-control" id="contactnumber" name="contactnumber" type="text"
-                    placeholder="Contact Number">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="email" name="email" type="text" placeholder="Email">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Message</label>
-              <textarea rows="5" class="form-control" placeholder="Enter Your Message">
-                </textarea>
-              <p class="help-block text-danger"></p>
-            </div>
-            <div class="form-group">
-              <a href="/" class="btn btn-primary">Send </a>
-            </div>
-          </form>
+  <!-- Main Content -->
+  <main class="container">
+    <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Leave your contact details here:</h4>
+          
         </div>
       </div>
-    </div>
-  </section>
+      <form>
+        <div class="form-group">
+          <label for="formGroupExampleInput">First Name</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+        </div>
+        <div class="form-group">
+          <label for="formGroupExampleInput2">Last Name</label>
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Name">
+        </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput2">Email</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Email">
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Message</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail3" placeholder="What do you want to say">
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-10 offset-sm-2">
+            <a class="btn btn-primary btn-md" href="/home" role="button">Submit</a>
+            </div>
+          </div>
+      </form>
+  </main>
 
-  <!--Footer-->
-  <%- include ('./partials/footer') %>
-</body>
+<%- include partials/bottom_nav.ejs %>  
 
-</html>
+<%- include partials/footer.ejs %>
