--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,13 +7,9 @@ Date: 03-10-2021
 */
 
 -->
-<footer class="footer text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 mb-5 mb-lg-0">
-                <h4 class="text-uppercase mb-4"> Email </h4>
-                <p class ="lead mb-0"> gagan2612.gk@gmail.com</p>
-            </div>
-        </div>
-    </div>
-</footer>
+<!-- Script Section -->
+  <script src="/jquery/dist/jquery.min.js"></script>
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/Scripts/app.js"></script>
+</body>
+</html>
