--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,35 +8,16 @@ Date: 03-10-2021
 
 -->
 
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1, shrink-to-fit=no"
-/>
-<meta name="description" content="" />
-<meta name="author" content="" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= title %> My Portfolio </title>
+  <!-- CSS Section -->
+  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
+  <link rel='stylesheet' href='/Content/app.css' />
 
-<title>My Portfilio</title>
-
-<!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-
-/>
-
-<!-- Custom fonts for this template -->
-<link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-  crossorigin="anonymous"
-/>
-
-<link
-  href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
-  rel="stylesheet"
-  type="text/css"
-/>
-
-<!-- Custom styles for this template -->
-<link href="public/Content/app.css" rel="stylesheet" />
-
-
+</head>
+<body>
