last & final commit with updated changes

--- a/views/services.ejs
+++ b/views/services.ejs
@@ -16,13 +16,13 @@ Date: 03-10-2021
 
 <div class ="col-12">
 <div class ="text-center">
-<img class ="width = 50%" src ="/Assests/images/web-application-development-process.png" />
+<img class ="width = 50%" src ="/Assests/images/web app.jpg" />
 </div>
 <div class ="description">
 <h3> Web application Development </h3>
 <p>
 We offer a wide range of web applications consulting services. It includes creating and delivering of
-              custom web applications, we support businesses in different to cater their targeted audiences.
+ custom web applications, we support businesses in different to cater their targeted audiences.
 </p>
 </div>
 </div>
@@ -36,8 +36,7 @@ We offer a wide range of web applications consulting services. It includes creat
 <div class ="description">
 <h3> Desktop application Development </h3>
 <p>
- We offer platform-specific or cross-platform desktop application development services which helps to turn
-              your software idea into a reality.
+ We offer platform-specific or cross-platform desktop application development services which helps to turn your software idea into a reality.
 </p>
 </div>
 </div>
@@ -45,19 +44,19 @@ We offer a wide range of web applications consulting services. It includes creat
  
 <div class ="col-12">
 <div class ="text-center">
-<img class ="width = 50%" src ="/Assests/images/mobile.png"/>
 </div>
 <div class ="description">
 <h3> Mobile application Development </h3>
 <p>
-we offer services which includes end-to-end development of mobile applications.UI/UX design to mobile
-              application testing and deployment.
+we offer services which includes end-to-end development of mobile applications.UI/UX design to mobile application testing and deployment.
 </p>
 </div>
-</div>
+</div> 
 
 </div>
 </div>
+
+
 </main>
 <%- include partials/bottom_nav %> 
  <%- include partials/footer.ejs %> 
